# VeliLake

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.sh
.dvc/: config
dags/: smart_mobility_data_lake.py
reports/: performance_report.md  performance_results.json
scripts/: benchmark_ingest.py  init_mysql.py  run_ingestion_once.py  setup_buckets.py
src/: config.py
src/api/: ingest_service.py  main.py  routes_curated.py  routes_health.py  routes_ingest.py  routes_raw.py  routes_staging.py  routes_stats.py  schemas.py
src/ingestion/: ingest_file.py  ingest_velib_api.py  ingest_weather_api.py  run_tracker.py
src/storage/: mongo_client.py  mysql_client.py  s3_client.py
src/transformation/: anomaly_detection.py  features.py  raw_to_staging.py  staging_to_curated.py
src/utils/: http.py  logging.py  time_utils.py  timing.py
tests/: test_features.py  test_health.py  test_schemas.py
