[project]
name = "smart-mobility-data-lake"
version = "1.0.0"
description = "Data Lake pour l'analyse de disponibilite des velos partages (Velib) - Projet final EFREI Data Lakes & Data Integration"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # API Gateway
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # Stockage
    "boto3>=1.34",                  # S3 (LocalStack)
    "mysql-connector-python>=8.3",  # Staging
    "pymongo>=4.6",                 # Curated
    # Ingestion / HTTP
    "requests>=2.31",
    "tenacity>=8.2",                # retry sur appels API
    # Transformation
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",            # IsolationForest (anomaly detection)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",                  # client de test FastAPI
]

# Airflow n'est PAS declare ici : il tourne dans son propre conteneur avec ses
# propres contraintes de version (constraints file officiel). Voir docker/airflow.

[tool.poetry]
package-mode = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
